# HYPSO-Reading

./: .gitignore  MANIFEST.in  README.md  demo.ipynb  meta.yaml  mjosa_2023-06-15_0948Zgeometric-meta-info-full.txt  pyproject.toml
.github/workflows/: create_key.yml  release.yml
hypsoreader/: __init__.py  device.py
hypsoreader/classification/: water.py
hypsoreader/exportfiles/: export.py
hypsoreader/georeference/: __init__.py  reference.py
hypsoreader/plot/: __init__.py  map.py
hypsoreader/radiometric/: __init__.py  correction.py
hypsoreader/radiometric/data/: coefficients_version_log.txt  rad_coeffs_FM_binx9_2022_08_06_Finnmark_recal_a.csv
hypsoreader/spectra/: coefficients.py
ignore/: chlorophyll.py  h1data_processing.py  satellite.py  satplot.py
