[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[project]
name="hypsoreader"
version = "0.1.0"
authors = [
  { name="Alvaro Flores", email="alvaro.f.romero@ntnu.no" },
]
description = "HYPSO Visualization tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies=[
  "numpy>=1.24",
  "cartopy",
  "pandas",
  "matplotlib",
  "geopandas",
  "rasterio",
  "gdal",
  "pyproj",
]

[project.urls]
"Homepage" = "https://github.com/DevAlvaroF/HYPSO-Reading"
"Bug Tracker" = "https://github.com/DevAlvaroF/HYPSO-Reading/issues"

[tool.setuptools]
include-package-data=true

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters