# -- build

[build-system]
requires=[
  "python >=3.9",
  "pip",
  "setuptools>=61.0",
  "setuptools_scm[toml]>=3.4",
  "wheel"]
  
build-backend="setuptools.build_meta"

[project]
name="hypsoreader"
version = "0.1.0"
authors = [
  { name="Alvaro Flores", email="alvaro.f.romero@ntnu.no" },
]
description = "HYPSO Visualization tool"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]

requires-python = ">=3.9"
dependencies=[
  "numpy>=1.24",
  "gdal =3.6.2",
  "cartopy =0.21.1",
  "pandas",
  "matplotlib",
  "geopandas =0.12.2",
  "rasterio =1.3.4",
  "pyproj =3.4.1",
]

# dynamic properties set by tools
dynamic = [
  "version",
]

[project.urls]
"Homepage" = "https://github.com/DevAlvaroF/HYPSO-Reading"
"Bug Tracker" = "https://github.com/DevAlvaroF/HYPSO-Reading/issues"

[tool.setuptools]
license-files = [ "LICENSE" ]
include-package-data=true

[tool.setuptools.packages.find]
include = [
  "hypsoreader*",
]
